# boxman

./: .gitignore  Makefile  README.md  boxman_full_help.txt  common.mk  conf.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
boxes/hybrid-libvirt-containerlab-arista-ceos/: README.md  conf.yml
boxes/hybrid-libvirt-containerlab-arista-ceos/configs/: sw1.cfg.j2
boxes/hybrid-libvirt-containerlab-cisco-iosvl2/: README.md  conf.yml
boxes/hybrid-libvirt-containerlab-cisco-iosvl2/configs/: sw1.cfg.j2
boxes/hybrid-libvirt-containerlab-nokia-srlinux/: README.md  conf.yml
boxes/hybrid-libvirt-containerlab-nokia-srlinux/configs/: sw1.cfg.j2
boxes/hybrid-two-vms-cloudinit/: conf.yml
boxes/libvirt-multi-project-cloudinit-ansible/: README.md
boxes/libvirt-multi-project-cloudinit-ansible/ansible/: site.yml
boxes/libvirt-multi-project-cloudinit-ansible/projects/centos7/: conf.yml
boxes/libvirt-multi-project-cloudinit-ansible/projects/rocky9/: conf.yml
boxes/multi-cluster-routed-via-ceos/: conf.yml
boxes/multi-cluster-routed-via-ceos/configs/: router.cfg.j2
boxes/multi-cluster-routed-via-frr/: conf.yml
boxes/multi-cluster-routed-via-frr/configs/: router.cfg.j2
boxes/multi-cluster-routed-via-srlinux/: conf.yml
boxes/multi-cluster-routed-via-srlinux/configs/: router.cfg.j2
boxes/rocky9-duo-cloudinit/: conf.yml
boxes/rocky9-two-vms-cloudinit/: conf.yml
boxes/talos-iso-boot/: conf.yml
boxes/ten-tiny-libvirt-ubuntu-24.04-cloudinit/: conf.yml
boxes/tiny-libvirt-centos-7-cloudinit/: conf.yml
boxes/tiny-libvirt-rocky-9-cloudinit/: conf.yml
boxes/tiny-libvirt-ubuntu-24.04-cloudinit/: conf.yml
boxes/tiny-libvirt-ubuntu-24.04-cloudinit-docker-runtime/: conf.yml
boxes/tiny-libvirt-ubuntu-24.04-oci/: README.md  conf.yml
boxes/tiny-multi-cluster-ubuntu-24.04-cloudinit/: conf.yml
boxes/ubuntu-24.04-live-iso-boot/: README.md  conf.yml
boxes/ubuntu-live-iso-boot/: README.md  conf.yml
containers/docker/: Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  ssh_config  supervisord.conf
containers/docker/api/: Dockerfile  README.md  docker-compose.yml
data/: conf.yml
data/demo/: conf.yml
data/dev/: conf.yml
data/dev/minimal/: conf.yml
data/dev/minimal-libvirt/: conf.yml
data/dev/minimal_ansible/: Makefile  conf.yml
data/dev/minimal_ansible/inventory/: 01-hosts.yml
data/dev/small_cluster/: Makefile  conf.yml
data/dev/small_cluster/inventory/: 01-hosts.yml
data/templates/: boxman.yml  conf.libvirt.yml  conf.yml  libvirt_image_manifest.json  libvirt_image_manifest_localdir.json  libvirt_image_manifest_web.json
doc/: image-management.md  pxe-support-plan.md  storage.md
doc/tutorial/: README.MD  README.md  default-conf.yml  playbook.yml
doc/tutorial/conf/: chapter3.yml
doc/tutorial/scripts/: generate_charts.py
doc/tutorial/tutorial1/: conf.yml
doc/tutorial/tutorial2/: conf-scaled.yml
docs/: import-vm-utility.md
docs/superpowers/plans/: 2026-06-26-iso-boot-support.md
docs/tutorial/: README.md  README_updated.md  boxman_beamer.tex  boxman_beamer_updated.tex  default-conf.yml
examples/: import_vm_examples.py
scripts/: count_loc.py  repackage_wheel.py
src/boxman/: __init__.py  config_cache.py  exceptions.py  image_cache.py  manager.py  metadata.py  task_runner.py
src/boxman/abstract/: hosts_specs.py  providers.py
src/boxman/api/: __init__.py  cache.py  capabilities.py  cli.py  cli_runner.py  config.py  deps.py  main.py  operations.py  redact.py
src/boxman/api/auth/: __init__.py  bootstrap.py  deps.py  rbac.py  security.py
src/boxman/api/db/: __init__.py  models.py  session.py
src/boxman/api/jobs/: __init__.py  celery_app.py  locks.py  service.py  tasks.py
src/boxman/api/routers/: __init__.py  auth.py  boxes.py  health.py  images.py  jobs.py  netlab.py  projects.py  run.py  snapshots.py  storage.py
src/boxman/api/schemas/: __init__.py  auth.py  common.py  jobs.py  operations.py  projects.py
src/boxman/assets/: network.xml.j2  network_interface.xml.j2
src/boxman/images/: __init__.py  cli.py  metadata.py  resolver.py
src/boxman/loggers/: logger.py
src/boxman/netlab/: __init__.py  containerlab.py  shared_bridges.py
src/boxman/providers/libvirt/: bare_vm.py  cdrom.py  clone_vm.py  cloudinit.py  cloudinit_presets.py  commands.py  destroy_vm.py  direct_vm.py  disk.py  disk_cleanup.py  import_image.py  iso_boot_vm.py  net.py  netdefine.py  oci_pull.py  oci_push.py  session.py  shared_folder.py  snapshot.py  storage.py  template_manager.py  virsh_edit.py  vm_differ.py
src/boxman/runtime/: __init__.py  base.py  docker_compose.py  local.py
src/boxman/scripts/: app.py  cli_parser.py  import_vm.py
src/boxman/utils/: decorators.py  env_loader.py  hostnames.py  http_download.py  io.py  jinja_env.py  references.py  shell.py  snapshot_graph.py
src/boxman/virtualbox/: natnetwork.py  parse_config.py  utils.py  vbox_list.py  vbox_modifyvm.py  vbox_natnetwork.py  vbox_showvminfo.py  vbox_snapshot.py  vboxmanage.py  vm.py
tests/: conftest.py  test_api_app.py  test_api_e2e.py  test_api_unit.py  test_bare_vm.py  test_boxman_conf.py  test_cli_smoke.py  test_cloudinit_presets.py  test_config_cache.py  test_docker_compose.py  test_exceptions_and_decorators.py  test_file_provisioning.py  test_hostnames.py  test_image_cache.py  test_images_cli.py  test_images_push.py  test_images_resolver.py  test_iso_boot_vm.py  test_iso_resolution.py  test_jinja_env.py  test_libvirt_cdrom.py  test_libvirt_clone_vm.py  test_libvirt_cloudinit.py  test_libvirt_destroy_vm.py  test_libvirt_disk_cleanup.py  test_libvirt_import_image.py  test_libvirt_net.py  test_libvirt_oci_pull.py  test_libvirt_oci_push.py  test_libvirt_session.py  test_libvirt_shared_folder.py  test_libvirt_snapshot.py  test_libvirt_storage.py  test_libvirt_template_manager.py  test_lifecycle_e2e.py  test_manager_core.py  test_netlab_cli.py  test_netlab_containerlab.py  test_netlab_manager_integration.py  test_netlab_schema.py  (+15 more)
