[tool.poetry]
name = "boxman"
version = "1.0.1.dev0"
description = "Boxman (box manager) – declarative VM/container provisioning via YAML"
authors = ["Mher Kazandjian <mherkazandjian@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://boxman.example.com"
packages = [
    { include = "boxman", from = "src" },
]
include = [
    { path = "containers/docker/docker-compose.yml", format = ["sdist", "wheel"] },
    { path = "containers/docker/Dockerfile", format = ["sdist", "wheel"] },
    { path = "containers/docker/Makefile", format = ["sdist", "wheel"] },
    { path = "containers/docker/supervisord.conf", format = ["sdist", "wheel"] },
    { path = "containers/docker/entrypoint.sh", format = ["sdist", "wheel"] },
    { path = "containers/docker/.env", format = ["sdist", "wheel"] },
    { path = "containers/docker/README.md", format = ["sdist", "wheel"] },
    { path = "boxes/**/*", format = ["sdist", "wheel"] },
]
exclude = [
    "containers/docker/data/**",
    "**/.boxman/**",
]

[tool.poetry.scripts]
boxman = "boxman.scripts.app:main"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
invoke = "^2.2"
Jinja2 = "^3.1"
lxml = "^5.0"

[tool.poetry.extras]
docker-compose = ["docker"]

[tool.poetry.group.runtime-docker.dependencies]
docker = ">=7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ipython = "*"
docker = ">=7.0"
ruff = "^0.8"
mypy = "^1.11"
pyupgrade = "^3.19"
pytest-cov = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: integration tests requiring Docker with compose v2 and /dev/kvm",
    "unit: fast unit tests that do not touch external systems",
    "smoke: CLI-level smoke tests (argparse, --help, config dry-run)",
    "regression: regression guards for fixes landed in git history",
    "slow: tests that take >5s; excluded from default runs",
]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore:pkg_resources is deprecated:DeprecationWarning",
    "ignore:'crypt' is deprecated:DeprecationWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# Start conservative: pyflakes + pycodestyle errors + naming + pyupgrade.
# Widen (ANN, D, S, SIM, RUF) once the new-module submodules settle.
select = ["E", "F", "W", "I", "N", "UP", "B"]
# Long lines in existing code — tolerate until Phase 2.1 rewraps. The
# modernization sweep (pyupgrade) is what's doing the real tightening.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests can star-import and can have long descriptive strings.
"tests/**/*.py" = ["N802", "N803", "N806", "E501"]

[tool.mypy]
python_version = "3.10"
# Lenient baseline for legacy code; tighten per-module below as modules
# are migrated.
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = false
check_untyped_defs = false

# Strict mode for the new, clean modules introduced in Phase 2.2.
[[tool.mypy.overrides]]
module = [
    "boxman.exceptions",
    "boxman.utils.decorators",
]
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
strict_equality = true
